[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "plutus"
version = "0.0.0"
description = ""
authors = ["Michal Jozwiak <mjozwiak@bink.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "app" },
    { include = "settings.py" },
]

[[tool.poetry.source]]
name = "azure"
url = "https://pkgs.dev.azure.com/binkhq/_packaging/binkhq/pypi/simple/"
priority = "primary"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.dependencies]
python = "^3.10"
kombu = "^5.2.4"
python-dateutil = "^2.8.2"
types-python-dateutil = "^2.8.19.6"
redis = "^4.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
isort = "^5.12.0"
coverage = "^7.1.0"
pytest-cov = "^4.0.0"
xenon = "^0.9.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
ignore_missing_imports = true
no_site_packages = true
